[package]
name = "rustProxy"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls", "hickory-dns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
url = "2.4"
once_cell = "1.19"
dotenvy = "0.15"
futures-util = "0.3"
base64 = "0.21"
urlencoding = "2.1"
num_cpus = "1.16"
ahash = { version = "0.8", features = ["serde"] }
smallvec = "1.11"
bytes = "1.5"
memchr = "2.6"
regex = "1.10"
log = "0.4"          
env_logger = "0.10"   

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release.package."*"]
opt-level = 3